--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
 @import './variables';
 @import './reboot';
 @import './mixin';
-
+// animation
+@import "animation";
 // button
 @import '../components/Button/style';
 // menu
 @import '../components/Menu/style';
+// icon
+@import "../components/Icon/style";
