--- a/src/components/Menu/_style.scss
+++ b/src/components/Menu/_style.scss
@@ -6,7 +6,7 @@
   list-style: none;
   border-bottom: $menu-border-width solid $menu-border-color;
   box-shadow: $menu-box-shadow;
-  .menu-item {
+  >.menu-item {
     padding: $menu-item-padding-y $menu-item-padding-x;
     cursor: pointer;
     transition: $menu-transition;
@@ -61,7 +61,7 @@
       transition: $menu-transition;
       color: $body-color;
       &.is-active, &:hover {
-        color: $menu-item-active-color !important;
+        color: $menu-item-active-color!important;
       }
     }
   }
