--- a/src/components/Input/_style.scss
+++ b/src/components/Input/_style.scss
@@ -1,4 +1,4 @@
-.input-wrapper {
+.viking-input-wrapper {
   display: flex;
   width: 100%;
   margin-bottom: 30px;
@@ -18,10 +18,10 @@
     }
   }
 }
-.icon-wrapper+.input-inner {
+.icon-wrapper+.viking-input-inner {
   padding-right: 35px;
 }
-.input-inner {
+.viking-input-inner {
   width: 100%;
   padding: $input-padding-y $input-padding-x;
   font-family: $input-font-family;
@@ -60,8 +60,8 @@
     opacity: 1;
   }
 }
-.input-group-prepend,
-.input-group-append {
+.viking-input-group-prepend,
+.viking-input-group-append {
   display: flex;
   align-items: center;
   padding: $input-padding-y $input-padding-x;
@@ -76,27 +76,27 @@
   border: $input-border-width solid $input-group-addon-border-color;
   border-radius: $input-border-radius;
 }
-.input-group-append + .btn {
+.viking-input-group-append + .btn {
   padding: 0;
   border: 0;
 }
-.input-group > .input-group-prepend,
-.input-group.input-group-append > .input-inner {
+.input-group > .viking-input-group-prepend,
+.input-group.input-group-append > .viking-input-inner {
   @include border-right-radius(0);
 }
 
-.input-group > .input-group-append,
-.input-group.input-group-prepend > .input-inner {
+.input-group > .viking-input-group-append,
+.input-group.input-group-prepend > .viking-input-inner {
   @include border-left-radius(0);
 }
 
-.input-size-sm .input-inner {
+.input-size-sm .viking-input-inner {
   padding: $input-padding-y-sm $input-padding-x-sm;
   font-size: $input-font-size-sm;
   border-radius: $input-border-radius-sm;
 }
 
-.input-size-lg .input-inner {
+.input-size-lg .viking-input-inner {
   padding: $input-padding-y-lg $input-padding-x-lg;
   font-size: $input-font-size-lg;
   border-radius: $input-border-radius-lg;
