--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,4 +11,6 @@
 // icon
 @import "../components/Icon/style";
 // input
-@import "../components/Input/style"
+@import "../components/Input/style";
+// autoComplete
+@import "../components/AutoComplete/style";
