--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,8 @@
 @import "../components/Input/style";
 // autoComplete
 @import "../components/AutoComplete/style";
+// upload
+@import '../components/Upload/style';
+
+// progress
+@import '../components/Progress/style';
