--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,8 @@
 @import "../components/AutoComplete/style";
 // upload
 @import '../components/Upload/style';
-
 // progress
 @import '../components/Progress/style';
+// alert
+@import '../components/Alert/style';
+@import '../components/Tabs/style';
