--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -34,6 +34,10 @@
   }
 }
 
+@mixin alert-color($background, $color) {
+  color: $color;
+  background-color: $background;
+}
 @mixin zoom-animation(
   $direction: 'top',
   $scaleStart: scaleY(0),
