--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -287,3 +287,41 @@ $progress-bg:                       $gray-200 !default;
 $progress-border-radius:            $border-radius !default;
 $progress-bar-color:                $white !default;
 $progress-bar-transition:           width .6s ease !default;
+
+// tabs
+$tabs-border-width: $border-width !default;
+$tabs-border-color: $border-color !default;
+$tabs-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.05) !default;
+
+$tabs-box-shadow-outline: inset 0 1px 0 rgba($white, 0.05), inset 0 -1px 1px rgba($black, 0.05) !default;
+
+$tabs-label-padding-y: 0.5rem !default;
+$tabs-label-padding-x: 1rem !default;
+$tabs-label-border-radius: 0.35rem;
+
+$tabs-label-disabled-color: $gray-600 !default;
+
+$tabs-label-active-color: $primary !default;
+$tabs-label-active-border-width: 1px !default;
+$tabs-label-active-border-bottom-width: 1.5px !default;
+$tabs-label-active-box-shadow: inset 0 -1px 0 rgba($white, 0.15), 1px -1px 1px rgba($black, 0.05) !default;
+
+$tabs-content-padding-y: 0.5rem !default;
+$tabs-content-padding-x: 1rem !default;
+
+// !! alert
+$alert-border-radius: 0.4rem !default;
+$alert-padding-y: 0.375rem !default;
+$alert-padding-x: 0.75rem !default;
+
+$alert-width: 30rem;
+$alert-line-height: $line-height-lg;
+
+$alert-title-font-size: $font-size-base * 1.2 !default;
+$alert-message-font-size: $font-size-base !default;
+
+$alert-icon-right: 1rem;
+$alert-icon-top: 0.5rem;
+
+$alert-icon-font-weight: $font-weight-normal;
+$alert-icon-font-size: $sub-sup-font-size;
